# Smart-Resume-Parser---Matching-System

./: .env.template  .gitignore  AI_FIX_SUMMARY.md  AI_INTEGRATION_GUIDE.md  ANALYZER_README.md  LICENSE  README.md  RESTRUCTURING_SUMMARY.md  analyze_candidate.py  demo_analyzer.py  list_models.py  pyproject.toml  test_ai_connection.py
data/jobs/: Jobs.py
data/resumes/: Alex_Rivera_resume.txt  Dr_Sarah_Chen_resume.txt  Riley_Taylor_resume.txt  test_resume_1.txt
scripts/: demo_analyzer.py  list_models.py  test_ai_connection.py
src/: config.py  fixtures.py  main.py
src/ai/: __init__.py  ai_service.py  base_client.py  gemini_client.py  groq_client.py  prompts.py
src/cli/: __init__.py  __main__.py  analyze_one.py  batch_pipeline.py
src/matching/: __init__.py  matcher.py
src/models/: Extractor_field.py  __init__.py  candidate.py  job.py  match_config.py
src/parsing/: parser.py
src/reporting/: __init__.py  report_generator.py
src/storage/: ai_suggestions.txt
src/utils/: __init__.py  matcher_utils.py
tests/: test_ai_service.py  test_matching.py  test_parser.py
