[project]
name = "resume-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nltk>=3.9.2",
    "spacy>=3.8.11",
    "typer>=0.21.1",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.12.0",
    "ruff>=0.15.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
# Target Python version (you're using 3.11 for Resume-Parser)
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Enable specific rules (E = Error, F = Pyflakes, I = Import Sorting)
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
